// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input changes its numeric value 1`] = `
<Input
  type="number"
  value={10}
>
  <input
    autoFocus={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="number"
    value="20"
  />
</Input>
`;

exports[`Input changes its value 1`] = `
<Input
  type="text"
  value="value A"
>
  <input
    autoFocus={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="value B"
  />
</Input>
`;

exports[`Input normally 1`] = `
<Input
  type="text"
  value="value A"
>
  <input
    autoFocus={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="value A"
  />
</Input>
`;
